:sparkles: feat: Adicionada nova Rota GET por TITLE
