# src/routers/MovieRouter.js
@@ -4,7 +4,8 @@ import MovieController from "../controllers/MovieController.js";
 const router = Router();
 
 router.get("/movies", MovieController.findAll);
-router.get("/movies/:id", MovieController.findOne);
+router.get("/movies/:title", MovieController.findByTitle);
+router.get("/movie/:id", MovieController.findOne);
 router.post("/movie", MovieController.create);
 router.put("/movie/:id", MovieController.update);
 router.delete("/movie/:id", MovieController.delete);
